Missing function to get the current time from the presentation time clock
There is no function to find out the current time (or clock ID) used in cogl_frame_info_get_presentation_time()
:
/**
* cogl_frame_info_get_presentation_time:
* @info: a #CoglFrameInfo object
*
* Gets the presentation time for the frame. This is the time at which
* the frame became visible to the user.
*
* The presentation time measured in nanoseconds is based on a
* monotonic time source. The time source is not necessarily
* correlated with system/wall clock time and may represent the time
* elapsed since some undefined system event such as when the system
* last booted.
*
* <note>Linux kernel version less that 3.8 can result in
* non-monotonic timestamps being reported when using a drm based
* OpenGL driver. Also some buggy Mesa drivers up to 9.0.1 may also
* incorrectly report non-monotonic timestamps.</note>
*
* Return value: the presentation time for the frame
* Since: 1.14
* Stability: unstable
*/
int64_t cogl_frame_info_get_presentation_time (CoglFrameInfo *info);
Adding a related function like a cogl_frame_info_get_current_time
would be helpful. It might already exist in the form of cogl_get_clock_time
but the above documentation makes me unsure if that's safe to assume.